--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <script src="script.js" defer=""></script>
+    <link rel="stylesheet" href="style.css">
+<title>НИИ</title>    
+</head>
+<body>
 
+</body>
+</html>
