--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <title>НИИ</title>    
 </head>
 <body>
-    
-    <img src="source/foto.jpg" id="foto">
-       
+    <div class="main-contain">
+     <img src="source/foto.jpg" id="foto">
+    </div>  
    
 
 </body>
