--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html id="html">
 <head>
     <script src="script.js" defer=""></script>
     <link rel="stylesheet" href="style.css">
 <title>НИИ</title>    
 </head>
 <body>
-    <div class="main-contain">
-     <img src="source/foto.jpg" id="foto">
+    <div class="main-contain" id="contain">
+     <img src="source/foto.jpg" id="foto" onmousedown="StartMove()" >
     </div>  
    
 
