--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html id="html">
+<html>
 <head>
     <script src="script.js" defer=""></script>
     <link rel="stylesheet" href="style.css">
 <title>НИИ</title>    
 </head>
-<body>
+<body id="body-size">
     <div class="main-contain" id="contain">
      <img src="source/foto.jpg" id="foto" onmousedown="StartMove()" >
     </div>  
