--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body id="body-size">
     <div class="main-contain" id="contain">
-     <img src="source/foto.jpg" id="foto" onmousedown="StartMove()" >
+     <img src="source/foto.jpg" id="photo" >
     </div>  
    
 
