--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <link rel="stylesheet" href="style.css">
 <title>НИИ</title>    
 </head>
-<body id="body-size">
-    <div class="main-contain" id="contain">
+<body id="body">
+    <div id="contain" class="container">
      <img src="source/foto.jpg" id="photo" >
+        <div class="grid" id="gridEx">
+
+        </div>
     </div>  
    
 
