--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body id="body">
     <div id="contain" class="container">
-     <img src="source/foto.jpg" id="photo" >
-        <div class="grid" id="gridEx">
+     <img src="source/foto2.jpg" id="photo" >
+        <div class="flexContainer" id="flexEx">
 
         </div>
     </div>  
