--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <script src="script.js" defer=""></script>
+    <script type="text/javascript" src="element.json"></script>
     <link rel="stylesheet" href="style.css">
 <title>НИИ</title>    
 </head>
